<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.biz.justin.myFeeNet.activity.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <EditText
            android:id="@id/login_id_username"
            style="@style/LayItemLoginInput"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:drawableLeft="@mipmap/ic_login_account"
            android:hint="@string/account" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@id/login_id_pwd"
                style="@style/LayItemLoginInput"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:drawableLeft="@mipmap/ic_login_passwd"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@id/eyes_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/login_id_pwd"
                android:layout_marginTop="30dp"
                android:button="@drawable/selector_pwd_image"
                android:checked="false"
                android:paddingRight="15dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <CheckBox
                android:id="@id/login_id_remember_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:checked="false"
                android:text="@string/remember_pwd"
                android:textSize="@dimen/base_size" />

        </LinearLayout>


        <Button
            android:id="@id/login_id_submit"
            style="@style/btn_login_general"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/sign_in" />

    </LinearLayout>

    <TextView
        android:id="@id/login_id_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/tv_forget_pwd" />

    <TextView
        android:id="@id/login_id_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/tv_register" />


</RelativeLayout>
