<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layerout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.biz.justin.myFeeNet.activity.login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <!--用户名-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/reg_account"
                android:textSize="@dimen/base_size" />

            <EditText
                android:id="@id/reg_id_username"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector_input_focus"
                android:lines="1"
                android:paddingLeft="10dp" />

        </LinearLayout>

        <!--真实名-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/reg_realName"
                android:textSize="@dimen/base_size" />

            <EditText
                android:id="@id/reg_id_realName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector_input_focus"
                android:lines="1"
                android:paddingLeft="10dp" />

        </LinearLayout>

        <!--性别-->
        <!--类型-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/reg_sex"
                android:textSize="@dimen/base_size" />

            <RadioGroup
                android:id="@+id/sex_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sex_radio_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/reg_sex_man" />

                <RadioButton
                    android:id="@+id/sex_radio_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reg_sex_woman" />
            </RadioGroup>

        </LinearLayout>


        <!--密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/reg_pwd"
                android:textSize="@dimen/base_size" />

            <EditText
                android:id="@id/reg_id_pwd"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector_input_focus"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="10dp" />

        </LinearLayout>

        <!--确认密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/reg_pwd_confirm"
                android:textSize="@dimen/base_size" />

            <EditText
                android:id="@id/reg_id_pwd_confirm"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector_input_focus"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="10dp" />

        </LinearLayout>


        <!--联系电话-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/reg_phone"
                android:textSize="@dimen/base_size" />

            <EditText
                android:id="@id/reg_id_phone"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/selector_input_focus"
                android:inputType="number"
                android:lines="1"
                android:maxLength="11"
                android:paddingLeft="10dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <Button
            android:id="@id/reg_id_reset"
            style="@style/btn_register_general"
            android:layout_height="40dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:text="@string/btn_reset" />

        <Button
            android:id="@id/reg_id_save"
            style="@style/btn_register_general"
            android:layout_height="40dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:text="@string/reg_save" />

    </LinearLayout>

</RelativeLayout>
