<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fee_add_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.biz.justin.myFeeNet.activity.feeInfo.FeeAddActivity">

    <include layout="@layout/top_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <!--类型-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/fee_feeType"
                android:textSize="@dimen/base_size" />

            <RadioGroup
                android:id="@+id/feeType_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/feeType_radio_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/feeType_pay" />

                <RadioButton
                    android:id="@+id/feeType_radio_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/feeType_income" />
            </RadioGroup>

        </LinearLayout>

        <!--消费日期-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/fee_useDate"
                android:textSize="@dimen/base_size" />

            <EditText
                android:id="@+id/fee_id_useDate"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginRight="20dp"
                android:layout_weight="3"
                android:background="@drawable/selector_input_focus"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:lines="1"
                android:paddingLeft="10dp" />

        </LinearLayout>


        <!--消费金额-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/fee_money"
                android:textSize="@dimen/base_size" />

            <EditText
                android:id="@+id/fee_id_money"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="3"
                android:background="@drawable/selector_input_focus"
                android:inputType="numberDecimal"
                android:lines="1"
                android:paddingLeft="10dp" />

        </LinearLayout>

        <!--消费事项-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/fee_useContent"
                android:textSize="@dimen/base_size" />

            <EditText
                android:id="@+id/fee_id_useContent"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginRight="20dp"
                android:layout_weight="3"
                android:background="@drawable/selector_input_focus"
                android:lines="4"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </LinearLayout>

        <!--备注-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/fee_note"
                android:textSize="@dimen/base_size" />

            <EditText
                android:id="@+id/fee_id_note"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="20dp"
                android:layout_weight="3"
                android:background="@drawable/selector_input_focus"
                android:lines="4"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <Button
            android:id="@+id/fee_add_id_reset"
            style="@style/btn_register_general"
            android:layout_height="40dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:text="@string/btn_reset" />

        <Button
            android:id="@+id/fee_add_id_save"
            style="@style/btn_register_general"
            android:layout_height="40dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:text="@string/btn_save" />

    </LinearLayout>
</LinearLayout>
